force-app/main/default/objects/Bloco__c/Bloco__c.object-meta.xml
<CustomObject>
    <label>Bloco</label>
    <nameField>
        <label>Nome do Bloco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blocos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>