force-app/main/default/objects/Bloco__c/fields/CodigoSistemaExterno__c.field-meta.xml
<CustomField>
    <fullName>CodigoSistemaExterno__c</fullName>
    <externalId>true</externalId>
    <label>Código Sistema Externo</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>