force-app/main/default/objects/Bloco__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Deve ser preenchido com o empreeendimento corespondente.</description>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Blocos</relationshipLabel>
    <relationshipName>Blocos</relationshipName>
    <type>Lookup</type>
</CustomField>