force-app/main/default/objects/Bloco__c/fields/NomeCodigoSistemaExterno__c.field-meta.xml
<CustomField>
    <fullName>NomeCodigoSistemaExterno__c</fullName>
    <externalId>true</externalId>
    <label>Nome Código Sistema Externo</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>