force-app/main/default/objects/Bloco__c/fields/QuantidadeAndares__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAndares__c</fullName>
    <description>Deve ser preenchido 
 com a quantidade
  de andares da Torre.</description>
    <label>Quantidade de Andares</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>