force-app/main/default/objects/Bloco__c/fields/TipoBloco__c.field-meta.xml
<CustomField>
    <fullName>TipoBloco__c</fullName>
    <label>Tipo de Bloco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ala</fullName>
            </value>
            <value>
                <fullName>Quadra</fullName>
            </value>
            <value>
                <fullName>Torre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>