force-app/main/default/objects/Bloco__c/fields/TotalUnidades__c.field-meta.xml
<CustomField>
    <fullName>TotalUnidades__c</fullName>
    <description>Deve ser preenchido com a quantidade de andares por Torre.</description>
    <label>Total de Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>