force-app/main/default/objects/Bloco__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Empreendimento__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>TipoBloco__c</columns>
    <columns>TotalUnidades__c</columns>
    <columns>QuantidadeAndares__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>